JWT Login Completed

--- a/Login/views/home.hbs
+++ b/Login/views/home.hbs
@@ -6,10 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/signup" method="post">
-        <input type="text" name="email">
-        <input type="password" name="password">
-        <button>Signup</button>
-    </form>
+    <h1>Welcome</h1>
 </body>
 </html>
