--- a/Login/views/login.hbs
+++ b/Login/views/login.hbs
@@ -7,9 +7,9 @@
 </head>
 <body>
     <form action="/login" method="post">
-    <input type="email">
-    <input type="password">
-    <button>Login</button>
+        <input type="text" name="email">
+        <input type="password" name="password">
+        <button>Login</button>
     </form>
 </body>
 </html>
